# paddleocr_vin_pipeline

./: .dockerignore  .gitignore  .streamlit_state.json  ARCHITECTURE.md  CHANGELOG.md  CODE_CITATIONS.md  CONTRIBUTING.md  DAGSHUB_IMPLEMENTATION_SUMMARY.md  DAGSHUB_SETUP.md  DEPENDENCY_UPDATE.md  Dockerfile  ENVIRONMENT_INFO.md  INSTALLATION.md  LICENSE  Makefile  NOTICE  README.md  TRAINING_IMPROVEMENTS.md  VIN_OCR_Architecture_Performance.md  analyze_high_performance.py  architecture_alignment_fixes.md  architecture_summary.json  config.py  debug_validation.py  dependency_graph.md  detail_architecture.py  docker-compose.yml  environment.yml  evaluate.py  example_usage.py  final_architecture_summary.py  final_status_summary.md  find_best_epoch.py  finetune_deepseek.py  finetune_paddleocr.py  keyjson  keyjson.pub  learning_rate_fix.md  multi_model_evaluation.py  ocr_providers.py  (+35 more)
.dvc/: config  config.local
.zen/: config.yaml
configs/: deepseek_finetune_config.yml  vin_dict.txt  vin_finetune_config.yml
docker/: Dockerfile.cpu  Dockerfile.gpu  README.md  build-and-run.sh  entrypoint.sh
docs/: ALGORITHM_COMPLEXITY.md  BLOCKING_ISSUES.md  CODE_BREAKDOWN.md  CONTROL_FLOW_DIAGRAMS.md  FINETUNING_TECHNIQUES.md  FULL_TRAINING_PIPELINE.md  ISSUES_REPORT.md  MODELS.md  TRAINING_DEEP_DIVE.md  TRAINING_GUIDE.md
examples/: dagshub_streaming_examples.py
results/: batch_evaluation_20260203_140457.json  batch_evaluation_20260203_140632.json  batch_evaluation_20260203_140918.json  batch_evaluation_20260203_143405.json  batch_evaluation_20260203_143619.json  batch_evaluation_20260203_150634.json  batch_evaluation_20260203_150716.json  batch_evaluation_20260203_150805.json  check_this_result.csv  detailed_metrics.json  experiment_summary.json  model_comparison.csv  multi_model_evaluation.json  sample_results.csv
scripts/: convert_all_to_onnx.py  fix_inference_models.py  onnx_example.py  prepare_dataset.py  prepare_finetune_data.py  reexport_and_convert_onnx.py
src/: __init__.py
src/vin_ocr/: __init__.py  cli.py
src/vin_ocr/core/: __init__.py
src/vin_ocr/evaluation/: __init__.py  evaluate.py  metrics.py  multi_model_evaluation.py
src/vin_ocr/inference/: __init__.py  onnx_inference.py  paddle_inference.py
src/vin_ocr/pipeline/: __init__.py  vin_pipeline.py
src/vin_ocr/preprocessing/: __init__.py  vin_preprocessor.py
src/vin_ocr/providers/: __init__.py  ocr_providers.py
src/vin_ocr/training/: __init__.py  export_deepseek_onnx.py  export_onnx.py  finetune_deepseek.py  finetune_paddleocr.py  metrics.py  train_from_scratch.py
src/vin_ocr/training/hyperparameter_tuning/: __init__.py  optuna_tuning.py
src/vin_ocr/utils/: __init__.py  gpu_utils.py  hardware_utils.py  prepare_dataset.py  prepare_finetune_data.py  validate_dataset.py
src/vin_ocr/web/: __init__.py  app.py  app_old_backup.py  requirements.txt  training_components.py
tests/: test_evaluate.py  test_filename_extraction.py  test_inference.py  test_ocr_providers.py  test_streamlit_ui.spec.js  test_ui_playwright.py  test_validate_dataset.py  test_vin_pipeline.py
web_ui/: README.md  __init__.py  app.py  requirements.txt
zenml_configs/: rosetta_ctc_config.yml
